--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,25 @@
 	    <version>4.12</version>
 	    <scope>test</scope>
 	</dependency>
+	<!-- Software AG specific dependencies-->
+<dependency>
+    <groupId>com.softwareag</groupId>
+    <artifactId>wm-isclient</artifactId>
+    <version>10.2</version>
+</dependency>
+<dependency>
+    <groupId>com.softwareag</groupId>
+    <artifactId>enttoolkit</artifactId>
+    <version>10.2</version>
+</dependency>
+<!-- Java Mail dependency-->
+<dependency>
+    <groupId>javax.mail</groupId>
+    <artifactId>mail</artifactId>
+    <version>1.4.7</version>
+</dependency>
   </dependencies>  
+
   	<reporting>
 	    <plugins>
 	        <plugin>
